<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/mountains_back"
    tools:context=".fragments.ProfileFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardProfile"
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:layout_margin="10dp"
        android:elevation="15dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="10dp"
        app:contentPadding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/ultra_dark_blue"
        app:strokeWidth="5dp"
        android:backgroundTint="@color/transparent"
        tools:layout_editor_absoluteX="26dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/cardName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:fontFamily="@font/almendra_sc"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/phoneCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:fontFamily="@font/almendra_sc"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/phone"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardName" />

            <EditText
                android:id="@+id/emailCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:fontFamily="@font/almendra_sc"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneCard" />

            <EditText
                android:id="@+id/addressCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/almendra_sc"
                android:textColorHint="@color/white"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:hint="@string/address"
                app:layout_constraintStart_toStartOf="@+id/emailCard"
                app:layout_constraintTop_toBottomOf="@+id/emailCard" />

            <EditText
                android:id="@+id/postCodeCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:fontFamily="@font/almendra_sc"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/postCode"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@+id/addressCard"
                app:layout_constraintTop_toBottomOf="@+id/addressCard" />

            <EditText
                android:id="@+id/facebookCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:fontFamily="@font/almendra_sc"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/facebook"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@+id/postCodeCard"
                app:layout_constraintTop_toBottomOf="@+id/postCodeCard" />

            <EditText
                android:id="@+id/linkedinCard"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/almendra_sc"
                android:gravity="center"
                android:hint="@string/linkedIn"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@+id/facebookCard"
                app:layout_constraintTop_toBottomOf="@+id/facebookCard" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/doneCardBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_coroner_rectangle"
                android:backgroundTint="@color/ultra_dark_blue"
                android:textColor="@color/white"
                android:text="@string/done"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>