<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/base_cardview"
        style="@style/Base.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/light_beige"
        android:elevation="15dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/brown"
        app:strokeWidth="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:id="@+id/userQR"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_launcher_foreground"
                    app:layout_constraintBottom_toTopOf="@+id/arrowButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/name_in_cardView"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:text="TextView"
                    app:layout_constraintEnd_toStartOf="@+id/userQR"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/userQR" />

                <TextView
                    android:id="@+id/phone_in_cardView"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_marginTop="10dp"
                    android:text="TextView"
                    app:layout_constraintStart_toStartOf="@+id/name_in_cardView"
                    app:layout_constraintTop_toBottomOf="@+id/name_in_cardView" />

                <ImageButton
                    android:id="@+id/arrowButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/arrow_down_float"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout

                android:id="@+id/hidden_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <ListView
                    android:id="@+id/listViewUser"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/decline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:background="@drawable/round_coroner_recktangle"
        android:backgroundTint="@color/red"
        android:text="@string/decline"
        app:layout_constraintStart_toStartOf="@+id/base_cardview"
        app:layout_constraintTop_toBottomOf="@+id/base_cardview" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_to_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="88dp"
        android:background="@drawable/round_coroner_recktangle"
        android:backgroundTint="@color/orange"
        android:text="@string/save_to_fav"
        app:layout_constraintEnd_toEndOf="@+id/base_cardview"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/save"
        app:layout_constraintTop_toBottomOf="@+id/base_cardview" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:background="@drawable/round_coroner_recktangle"
        android:backgroundTint="@color/green"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@+id/base_cardview"
        app:layout_constraintTop_toBottomOf="@+id/save_to_fav" />

</androidx.constraintlayout.widget.ConstraintLayout>